added: springSecurity authorization feature, service layer, handling for endpoints